<resources>
    <string name="app_name">Lab2</string>
    <!-- String related to shared preferences -->
    <string name="preference_user_key">com.example.lenovo.lab.USER</string>
    <string name="preference_user_key_default">none</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>

    <string name="delete">ELIMINAR</string>
    <string name="edit">EDITAR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="my_alumno">Alumnos</string>
    <string name="my_curso">Cursos</string>

    <string name="nombreAddUpdAlum">Nombre</string>
    <string name="emailAddUpdAlum">Email</string>
    <string name="cedulaAddUpdAlum">Cedula</string>
    <string name="telefonoAddUpdAlum">Telefono</string>
    <string name="fechaAddUpdAlum">Fecha de nacimiento</string>
    <string name="carreraAddUpdAlum">Carrera</string>

    <string name="nombreAddUptCur">Nombre</string>
    <string name="codigoAddUpdCur">Codigo</string>
    <string name="creditoAddUptCur">Creditos</string>
    <string name="horaAddUptCur">Horas</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="action_search">Buscar</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_nav_drawer">Bienvenido</string>
    <string name ="appbar_scrolling_view_behavior">appbar_scrolling_view_behavior</string>
</resources>
